--- a/src/WeatherApp.css
+++ b/src/WeatherApp.css
@@ -1,38 +1,77 @@
-.App {
+.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-image: url('../public/images/pexels-pixabay-531756.jpg');
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.search-container{
+  margin-top: 3%;
+  margin-left: 10%;
+  width: 80%;
+  height: 20%;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 20px;
+}
+
+.title{
+  font-weight: 100;
+  font-size: 40px;
+  color: #000;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.search-box {
+  margin-top: 1%;
+  margin-left: 30%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.search-box *{
+  display: inline-block;
+  margin-left: 5%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+.cityname{
+  width: 35%;
+  height: 4vh !important;
+  border: none;
+  border-radius: 15px;
+  outline: none;
+}
+
+.cityname::-webkit-input-placeholder {
+  font-weight: lighter;
+  color:#AFB2B3;
+}
+.cityname::-moz-placeholder {
+  font-weight: lighter;
+  color:#AFB2B3;
+}
+.cityname::-ms-input-placeholder {
+  font-weight: lighter;
+  color:#AFB2B3;
+}
+
+.cityname:focus::placeholder {
+  color: transparent;
+}
+
+.submit {
+  width: 15%;
+  height: 4vh !important;
+  border: none;
+  border-radius: 15px;
+  outline: none;
+  background-color: #000;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.submit:hover{
+  cursor: pointer;
+  background-color: rgb(41, 41, 41);
 }
