--- a/src/WeatherApp.css
+++ b/src/WeatherApp.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-image: url('../public/images/backgrounds/sunny.jpg');
+  background-image: url('../public/images/backgrounds/mainbg.jpg');
   background-size: 100%;
   background-repeat: no-repeat;
 }
@@ -14,20 +14,58 @@
   margin-left: 10%;
   width: 80%;
   height: 20%;
-  background-color: rgba(255, 255, 255, 0.7);
   border-radius: 20px;
 }
 
+
+.main-searchbox{
+  margin-left: 35%;
+}
+
+.main-searchbox *{
+  margin-left: 4%;
+}
+
+
+.main-searchbox button{
+  width: 15%;
+  height: 4vh !important;
+  border: none;
+  outline: none;
+
+  font-weight: 600;
+}
+
+.search-btn-this{
+  background-color: rgb(255, 255, 255);
+  color: black;
+}
+
+.search-btn-another{
+  background-color: rgb(0, 0, 0);
+  color: white;
+}
+
+.search-btn-this:hover{
+  cursor: pointer;
+  background-color: rgb(241, 241, 241);
+}
+
+.search-btn-another:hover{
+  cursor: pointer;
+  background-color: rgb(29, 29, 29);
+}
+
 .title{
-  font-weight: 100;
-  font-size: 40px;
-  color: #000;
+  font-weight: 900;
+  font-size: 80px;
+  color: #FFF;
   text-align: center;
 }
 
 .search-box {
-  margin-top: 1%;
-  margin-left: 30%;
+  margin-top: 5%;
+  margin-left: -15%;
 }
 
 .search-box *{
@@ -38,21 +76,16 @@
 
 .cityname{
   width: 35%;
+  height: 4vh;
   border-radius: 15px;
+  border: none;
   outline: none;
 }
 
-.cityname::-webkit-input-placeholder {
+.cityname::-webkit-input-placeholder, .cityname::-moz-placeholder, .cityname::-ms-input-placeholder {
   font-weight: lighter;
   color:#AFB2B3;
-}
-.cityname::-moz-placeholder {
-  font-weight: lighter;
-  color:#AFB2B3;
-}
-.cityname::-ms-input-placeholder {
-  font-weight: lighter;
-  color:#AFB2B3;
+  text-align: center;
 }
 
 .cityname:focus::placeholder {
